typescript/checker/tests/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment5.ts.stderr
error: TS1063 {
    span: Span {
        lo: BytePos(
            16,
        ),
        hi: BytePos(
            27,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment5.ts:2:5
  |
2 |     export = A;
  |     ^^^^^^^^^^^

